simplified protocol adapters with a registry